Android/Android1/Android1.NativeActivity/ARM/Debug/Android1.NativeActivity.log
  ANDROID_HOME=C:\ProgramData\Microsoft\AndroidSDK\25
  ANT_HOME=C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\Apps\apache-ant-1.9.3
  JAVA_HOME=C:\Program Files\Java\jdk1.8.0_161
  NDK_ROOT=C:\\Microsoft\AndroidNDK64\android-ndk-r13b
  Apple.cpp
  BackGround.cpp
  Camera.cpp
  Dust.cpp
  Enemy.cpp
  Fannings.cpp
  Game.cpp
  GamePlay.cpp
GamePlay.cpp(14,10): warning : suggest braces around initialization of subobject [-Wmissing-braces]
          box = { 0, 0, WINDOW_X, WINDOW_Y };
                  ^~~~
                  {   }
GamePlay.cpp(14,16): warning : suggest braces around initialization of subobject [-Wmissing-braces]
          box = { 0, 0, WINDOW_X, WINDOW_Y };
                        ^~~~~~~~~~~~~~~~~~
                        {                 }
  ./Typedef.h(4,18) :  note: expanded from macro 'WINDOW_X'
  #define WINDOW_X 1920
                   ^
  2 warnings generated.
  Item.cpp
  Main.cpp
  Over.cpp
  Player.cpp
Player.cpp(45,6): warning : unused variable 'x' [-Wunused-variable]
          int x, y;
              ^
Player.cpp(45,9): warning : unused variable 'y' [-Wunused-variable]
          int x, y;
                 ^
Player.cpp(61,11): error : use of undeclared identifier 'ANGLE'
                  angle = ANGLE(atan2(tempPos.x - pos.x, tempPos.y - pos.y));
                          ^
Player.cpp(64,10): warning : expression result unused [-Wunused-value]
                          angle - 360;
                          ~~~~~ ^ ~~~
Player.cpp(68,8): warning : expression result unused [-Wunused-value]
                          360 + angle;
                          ~~~ ^ ~~~~~
  4 warnings and 1 error generated.
